--- a/default_qap.yaml
+++ b/default_qap.yaml
@@ -1,5 +1,5 @@
 ---
-name: Reg-ER-100-2.0_freeze_mlp
+name: Reg-ER-100-0.0.0_freeze_mlp
 cpu: No
 root_dir: .
 
@@ -40,10 +40,10 @@ arch: # Architecture and model
   model_name: Simple_Node_Embedding
   num_blocks: 2
   original_features_num: 2
-  in_features: 128
-  out_features: 128
+  in_features: 64
+  out_features: 64
   depth_of_mlp: 3
-  freeze_mlp: [2,0]
+  freeze_mlp: [0,0,0] #number of mlp blocks to freeze in each regular block
 
 observers:
   neptune:
