--- a/default_qap.yaml
+++ b/default_qap.yaml
@@ -11,17 +11,17 @@ train_data: # Train data related parameters
   edge_density: 0.2
   n_vertices: 25
   vertex_proba: 1. # Parameter of the binomial distribution of vertices
-  noise: 0.1
+  noise: 0.05
   path_dataset: dataset # Path where datasets are stored
 
 test_data: # Test data related parameters
   num_examples_test: 1000
-  generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+  generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert or steps
   noise_model: ErdosRenyi
   edge_density: 0.2
   n_vertices: 25
   vertex_proba: 1. # Parameter of the binomial distribution of vertices
-  noise: 0.1
+  noise: 0.05
   path_dataset: dataset # Path where datasets are stored
 
 train: # Training parameters
@@ -40,8 +40,8 @@ arch: # Architecture and model
   model_name: Simple_Node_Embedding
   num_blocks: 2
   original_features_num: 2
-  in_features: 128
-  out_features: 128
+  in_features: 64 #was 128 at first
+  out_features: 64 #idem
   depth_of_mlp: 3
 
 observers:
