--- a/default_label.yaml
+++ b/default_label.yaml
@@ -6,20 +6,36 @@ root_dir: .
 train_data: # Train data related parameters
   num_examples_train: 20000
   num_examples_val: 1000
-  generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-  edge_density: 0.2
-  n_vertices: 25
-  vertex_proba: 0.5 # Parameter of the binomial distribution of vertices
+  graph_1:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
+    n_vertices: 25
+    vertex_proba: 1. # Parameter of the binomial distribution of vertices
+  graph_2:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
+    n_vertices: 25
+    vertex_proba: 1. # Parameter of the binomial distribution of vertices
+  merge_arg:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
   path_dataset: dataset # Path where datasets are stored
 
 test_data: # Test data related parameters
   num_examples_test: 1000
-  generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-  noise_model: ErdosRenyi
-  edge_density: 0.2
-  n_vertices: 25
-  vertex_proba: 0.5 # Parameter of the binomial distribution of vertices
-  noise: 0.1
+  graph_1:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
+    n_vertices: 25
+    vertex_proba: 0.5 # Parameter of the binomial distribution of vertices
+  graph_2:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
+    n_vertices: 25
+    vertex_proba: 1. # Parameter of the binomial distribution of vertices
+  merge_arg:
+    generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
+    edge_density: 0.2
   path_dataset: dataset # Path where datasets are stored
 
 train: # Training parameters
