--- a/default_cluster.yaml
+++ b/default_cluster.yaml
@@ -8,17 +8,17 @@ train_data: # Train data related parameters
   num_examples_val: 1000
   graph_1:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.2
+    edge_density: 0.5
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   graph_2:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.2
+    edge_density: 0.5
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   merge_arg:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.0
+    edge_density: 0.2
   path_dataset: dataset # Path where datasets are stored
 
 test_data: # Test data related parameters
@@ -51,11 +51,12 @@ train: # Training parameters
 
 arch: # Architecture and model
   arch: Similarity_Model
+  # arch: Simple_Node_Embedding
   model_name: Simple_Node_Embedding
   num_blocks: 2
   original_features_num: 2
-  in_features: 128
-  out_features: 128
+  in_features: 64
+  out_features: 64
   depth_of_mlp: 3
   freeze_mlp: [0, 0, 0] #number of mlp blocks to freeze in each regular block
 
