--- a/default_cluster.yaml
+++ b/default_cluster.yaml
@@ -9,34 +9,34 @@ train_data: # Train data related parameters
   num_examples_val: 1000
   graph_1:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.5
+    edge_density_range: [0, 1]
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   graph_2:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.5
+    edge_density_range: [0, 1]
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   merge_arg:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.2
+    edge_density_range: [0, 1]
   path_dataset: dataset # Path where datasets are stored
 
 test_data: # Test data related parameters
   num_examples_test: 1000
   graph_1:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.2
+    edge_density_range: [0, 1]
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   graph_2:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.2
+    edge_density_range: [0, 1]
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   merge_arg:
     generative_model: ErdosRenyi # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0.0
+    edge_density_range: [0, 1]
   path_dataset: dataset # Path where datasets are stored
 
 train: # Training parameters
