--- a/config_symmetric.yml
+++ b/config_symmetric.yml
@@ -31,7 +31,7 @@ test_data: # Test data related parameters
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   graph_2:
     generative_model: Symmetric # so far ErdosRenyi, Regular or BarabasiAlbert
-    edge_density: 0
+    edge_density: 0.009 #if symmetric, this means noise !
     n_vertices: 25
     vertex_proba: 1. # Parameter of the binomial distribution of vertices
   merge_arg:
